--- a/Projects/london_bikes.ipynb
+++ b/Projects/london_bikes.ipynb
@@ -101,8 +101,8 @@
    "source": [
     "# https://www.youtube.com/watch?v=nl9eZl1IOKI\n",
     "# Installing required modules\n",
-    "!pip install pandas\n",
-    "!pip install zipfile\n",
+    "%pip install pandas\n",
+    "%pip install zipfile\n",
     "%pip install kaggle\n",
     "\n",
     "import pandas as pd  # library to explore the data\n",
